tests/baselines/reference/functionOverloads5.errors.txt
==== tests/cases/compiler/functionOverloads5.ts (1 errors) ====
    class baz { 
      public foo();
             ~~~
!!! error TS2385: Overload signatures must all be public or private.
      private foo(bar?:any){ }
    }
    